--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
 <br/>
 
 
-<h4>Problems Near Me - Currently active zip code: <%= current_user.zip %></h4>
+<h4>Problems Near Me - Currently active zip code: <%= @geopoint.zip %></h4>
   <head>
     <title>Simple Map</title>
     <meta name="viewport" content="initial-scale=1.0">
@@ -26,7 +26,6 @@
     </style>
   </head>
   <body>
-    <% current_geopoint = Geopoint.find_by(zip: current_user.zip) %>
     <div id="map"></div>
     <script>
       var map;
@@ -39,7 +38,7 @@
       function initMap() 
       {
         map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: <%= current_geopoint.latitude %>, lng: <%= current_geopoint.longitude %>},
+          center: {lat: <%= @geopoint.latitude %>, lng: <%= @geopoint.longitude %>},
           zoom: 14,
           streetViewControl: false,
           mapTypeControl: false
