--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,22 +4,27 @@
 
 //*= require introjs
 
-
-
 html, body {
-  height: 100%;
+  height: 100vh;
   margin: 0;
-/* Trivial style make the text large */
-  font-size: 48px; 
 }
+
 .wrapper {
-  min-height: 100%;
-  
-  /* This is the same as the height of the footer */
-  margin-bottom: -100px; 
+  min-height: 58vh;
+  padding: 2vh 1vw;
 }
-/* The height of the footer and push must be the same */
-.footer,
-.push {
-  height: 100px;
+
+.navbar {
+  height: 10vh;
+  font-family: 'Lucida Grande', Verdana, Arial, Sans-Serif;
+}
+
+.navbar-brand {
+  font-size: 2.2em;
+}
+
+#map {
+  height: 60vh;
+  width: 80%;
+  margin: auto;
 }
