--- a/app/assets/stylesheets/problems.scss
+++ b/app/assets/stylesheets/problems.scss
@@ -6,9 +6,6 @@
   font-size: 150%;
 }
 
-
-
-
 /* Style the tab */
 .tab {
   overflow: hidden;
@@ -47,6 +44,16 @@
 
 .tabcontent {
   animation: fadeEffect 1s; /* Fading effect takes 1 second */
+}
+
+.my-problems {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.problem {
+  margin: 0 2vw 0 0;
+  max-width: 28vw;
 }
 
 /* Go from zero to full opacity */
