--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="page-footer font-small blue pt-4">
+<footer class="footer page-footer font-small blue pt-4">
 
   <!-- Footer Links -->
   <div class="container-fluid text-center text-md-left">
@@ -8,7 +8,7 @@
     <div class="row">
 
       <!-- Grid column -->
-      <div class="col-md-6 mt-md-0 mt-3">
+      <div class="col-md-8 mt-md-0 mt-3">
 
         <!-- Content -->
         <h5 class="text-uppercase">Just Be Human</h5>
@@ -51,8 +51,7 @@
   <!-- Footer Links -->
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2018 Copyright: Just Being Human, LLC
-  </div>
+  <div class="footer-copyright text-center py-3">© 2018 Copyright: Just Being Human, LLC</div>
   <!-- Copyright -->
 
 </footer>
