--- a/app/views/problems/_form.html.erb
+++ b/app/views/problems/_form.html.erb
@@ -16,6 +16,6 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit, class: 'btn btn-outline-primary'%>
   </div>
 <% end %>
