--- a/app/views/problems/new.html.erb
+++ b/app/views/problems/new.html.erb
@@ -2,7 +2,6 @@
 
 <%= render 'form', problem: @problem %>
 
-
 <br/>
 <br/>
-<%= link_to 'Back', problems_path %>
+<%= link_to 'Back', :back, class: 'btn btn-warning' %>
