--- a/app/views/problems/show.html.erb
+++ b/app/views/problems/show.html.erb
@@ -1,19 +1,4 @@
   <head>
-    <!-- This page is copyright Elated Communications Ltd. (www.elated.com) -->
-
-    <title>JavaScript tabs example</title>
-
-<!--     <style type="text/css">
-      body { font-size: 80%; font-family: 'Lucida Grande', Verdana, Arial, Sans-Serif; }
-      ul#tabs { list-style-type: none; margin: 30px 0 0 0; padding: 0 0 0.3em 0; }
-      ul#tabs li { display: inline; }
-      ul#tabs li a { color: #42454a; background-color: #dedbde; border: 1px solid #c9c3ba; border-bottom: none; padding: 0.3em; text-decoration: none; }
-      ul#tabs li a:hover { background-color: #f1f0ee; }
-      ul#tabs li a.selected { color: #000; background-color: #f1f0ee; font-weight: bold; padding: 0.7em 0.3em 0.38em 0.3em; }
-      div.tabContent { border: 1px solid #c9c3ba; padding: 0.5em; background-color: #f1f0ee; }
-      div.tabContent.hide { display: none; }
-    </style> -->
-
     <script type="text/javascript">
     //<![CDATA[
 
@@ -42,22 +27,19 @@
       function init() {
         document.getElementById("defaultOpen").click();
       }
+
+      init();
     //]]>
     </script>
   </head>
 
-  <body onload="init()">
+  <body>
     <h1> <%= @problem.title %> </h1>
     <div class="tab">
       <button class="tablinks" onclick="openTab(event, 'problem-info-tab')" id="defaultOpen">General Problem Info</button>
       <button class="tablinks" onclick="openTab(event, 'problem-milestones-tab')">Milestones and Progress</button>
       <button class="tablinks" onclick="openTab(event, 'problem-people-tab')">Volunteers and Followers</button>
     </div>
-
-    <script>
-      // Get the element with id="defaultOpen" and click on it
-      
-    </script>
     <!-- Tab content -->
     <div id="problem-info-tab" class="tabcontent">
       <div class="tabTitle"><h2>Problem Information</h2></div>
@@ -81,7 +63,6 @@
         <%= @problem.user.username %>
       </h5>
 
-
       <h5>
         <strong>Follower count:</strong>
         <%= @problem.follower_count %>
@@ -96,7 +77,7 @@
 
       <h2> Posts </h2>
             <% @problem.posts.each do |post| %>
-              
+
               <ul>
                 <div class="post-container">
                   <p>Topic: <%= link_to "#{post.title}", post, class: 'btn btn-outline-info btn-lg' %></p>
@@ -107,30 +88,25 @@
                   <td>  |  <%= link_to 'Edit', edit_post_path(post) %>  |  </td>
                   <td><%= link_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-failure my-2 my-sm-0' %></td>
                   <% end %>
-                </div> 
+                </div>
               </ul>
 
             <% end %>
-          </tbody>
-        </table>
-
         <% if current_user && @role %>
         <%= link_to 'Add A Post', new_post_path(:problem => {:problem_id => @problem.id}) %>
         <% end %>
-
-
     </div>
 
     <div id="problem-milestones-tab" class="tabcontent">
       <h2>Milestones</h2>
 
       <% @problem.milestones.each do |milestone| %>
-      <p>
-          <Strong>Title:</Strong> <%= milestone.title %><br>
-          <Strong>Current Status:</Strong> <%= milestone.current_status %><br>
-          <Strong>Complete:</Strong> <%= milestone.complete %> <br>
-          <Strong>Current/Needed Participants:</Strong> <%= milestone.participants_required %> <br>
-          
+        <div>
+            <strong>Title:</strong> <%= milestone.title %><br>
+            <strong>Current Status:</strong> <%= milestone.current_status %><br>
+            <strong>Complete:</strong> <%= milestone.complete %> <br>
+            <strong>Current/Needed Participants:</strong> <%= milestone.participants_required %> <br>
+
             <div class="btn-group" role="group" aria-label="Admin Controls">
               <%= link_to 'Show', milestone, class: 'btn btn-outline-success my-2 my-sm-0' %>
               <% if @role && @role.level <= 2 %>
@@ -138,8 +114,7 @@
               <%= link_to 'Delete', milestone, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-danger my-2 my-sm-0' %>
               <% end %>
             </div>
-          
-      </p>
+        </div>
       <%end%>
 
       <% if @role && @role.level <= 2 %>
@@ -152,8 +127,8 @@
     <div id="problem-people-tab" class="tabcontent">
       <h2>Followers</h2>
       <% @problem.roles.each do |role| %>
-        <p>Username: <%= role.user.username %>  |  Role: <%= role.title %> 
-        <% if (current_user == @problem.user) && (role.user != current_user) && (role.level == 4 || role.level == 3) %> 
+        <p>Username: <%= role.user.username %>  |  Role: <%= role.title %>
+        <% if (current_user == @problem.user) && (role.user != current_user) && (role.level == 4 || role.level == 3) %>
         | <%= link_to 'Promote User', controller: "problems", action: "promote_user", problem_id: @problem.id, target_user_id: role.user.id %>
         <% elsif (current_user == @problem.user) && (role.user != current_user) && role.level < 4 %>
         | <%= link_to 'Demote User', controller: "problems", action: "demote_user", problem_id: @problem.id, target_user_id: role.user.id %>
@@ -163,8 +138,5 @@
     </div>
 
 
-    <p>
-      <%= link_to 'Back', :back, class: "btn btn-warning btn-lg" %>
-    </p>
-
-  </body>  
+    <p><%= link_to 'Back', :back, class: "btn btn-warning btn-lg" %></p>
+  </body>
