starting to style up the costs page a bit, got charts working, also got the home page map to only show one infowindow at a time

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -53,7 +53,7 @@
 .home-page-aside {
   padding: 1vh 1vw;
   grid-column: 1;
-  background-color: lightgray;
+  background-color: #e6f9ff;
   height: 80vh;
   overflow-y: scroll;
 }
