--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -12,7 +12,7 @@
 
         <!-- Content -->
         <h5 class="text-uppercase">Just Be Human</h5>
-        <p>Just Be Human is operated by Just Being Human, a 501(c)3 nonprofit that is entirely funded by donations. If you would like to make a donation and help keep the lights on in my apartment while I build this platform, you can do so in the links to the right. If you would like to read more about Just Being Human- where we came from, where we're going, and why we're doing this, you can also find that information here. </p>
+        <p>Just Be Human is operated by Just Being Human, a 501(c)3 nonprofit that is entirely funded by donations. Check out these footer links for more information or to help keep a roof over my head! </p>
 
       </div>
       <!-- Grid column -->
@@ -30,10 +30,7 @@
             <a href="/costs">View Month-to-date Costs</a>
           </li>
           <li>
-            <a href="/donate">Donate!</a>
-          </li>
-          <li>
-            <a href="/help">I'd like to help!</a>
+            <a href="/donate">Donation and Help Info</a>
           </li>
           <li>
             <a href="/aboutus">Learn more about us</a>
@@ -51,7 +48,7 @@
   <!-- Footer Links -->
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2018 Copyright: Just Being Human, LLC</div>
+  <div class="footer-copyright text-center py-3">© <%= Date.today.strftime('%Y') %> Copyright: Just Being Human, LLC</div>
   <!-- Copyright -->
 
 </footer>
