lots of good stuff is set up

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -62,3 +62,39 @@
   border-bottom: 1px solid;
   margin-bottom: 2px;
 }
+
+
+
+.donation-booleans {
+  text-align: center;
+  font-size: 1.5em;
+}
+
+.donation-email-input {
+  font-size: 2em;
+  text-align: center;
+}
+
+
+.donation-signup-error {
+  text-align: center;
+}
+
+.donation-info-title {
+  padding-left: 1vw;
+  padding-top: 3vh;
+}
+
+.aboutus-title {
+  padding-left: 1vw;
+  padding-top: 2vw;
+}
+
+.aboutus-list {
+  padding-right: 1vw;
+  padding-top: 3vw;
+}
+
+.aboutus-bottom-padding {
+  height: 3vw;
+}
