--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -1,13 +1,14 @@
 <div class="jumbotron">
-  <h1 class="display-3">Welcome to <Strong>Just Be Human</Strong></h1>
-  <p class="lead">Thank you for checking out what we're building!</p>
+  <h1 class="display-3">Welcome to <Strong>Just Be Human*</Strong></h1>
+  <p class="lead">Thank you for checking out what we're building! Hopefully we can answer some of your questions here. </p>
   <hr class="my-4">
-  <p><Strong>What is Just Be Human?</Strong>
+  <p>
+    <li><Strong>What is Just Be Human?</Strong></li>
     <br>
-    Just Be Human is project management software for crowd-sourced volunteerism. Put more simply, it is a way for people to define, communicate about, and solve problems in their community!
+    Put simply, Just Be Human is a platform for you to identify problems in your community, connect with neighbors who want to help, and track your progress over time as you work to solve real issues in your world.
     <br>
     <br>
-    <Strong>How do I use it?</Strong>
+    <li><Strong>How does it work?</Strong></li>
     <br>
 
     You start by defining the problem you want to solve. It can be anything! Let's say it's picking up trash in your neighborhood, or doing some maintenance work in a neighborhood park, or getting a safety hazard like a pothole or dangerous sidewalk fixed.
@@ -20,20 +21,69 @@
 
     <br>
     <br>
-    <Strong>Why?</Strong>
+    <li><Strong>Can you give me an example?</Strong></li>
     <br>
-    Just Be Human is founded on the premise that there are currently a lot of people who feel the desire to do something to help their community but just aren't sure where to start. There are a lot of us who see small, entirely solvable problems in our community on a daily basis and think "someone should do something about that." This platform is designed to help that person become that "someone".
-    <br>
-    <br>
-    There is not a good way for groups of people to organize themselves to solve prolems in their community- local government is too slow and cumbersome and neighborhood discussion boards do not have a good way to track the progress of tasks over time. Just Be Human is designed to help hold neighbors accountable to each other to solve problems that would've otherwise continued.
-    <br>
-    <br>
-    <Strong>Why does your website look so terrible?</Strong>
-    <br>
-    I'm a back-end developer by training, so I'm having to learn an entirely different side of software development to actually build something that doesn't make people physically uncomfortable to look at. I've got someone coming in to help though!
+    
+      There's a vagrant lot in your neighborhood. It's an eyesore, it's filled with trash, and it's a haven for rodents. You've walked past it on your way to work every day for months and thought "someone should do something about that" almost every time. We believe that you're not alone in thinking that- and we want to connect you with the other people who have.
+      <br>
+      <br>
+        <ul>
+          <li>How do we do that?</li>
+          <ul>
+            <li>
+              Every <b>Problem</b> can be broken down into a collection of smaller problems that must be solved before the overarching problem can be solved. On our platform these are called <b>Milestones</b>.
+            </li>
+            <li>
+              So what are the milestones for our vagrant lot problem? Let's break it down into the pieces we need to fix this problem.
+              <ul>
+                <li>
+                  We need a few people. Let's call it 4 people so that we can get it done quickly.
+                </li>
+                <li>
+                  We need a collection of garden tools to deal with the overgrown weeds and grass.
+                </li>
+                <li>
+                  We need 4 pairs of gardening gloves to protect people's hands.
+                </li>
+                <li>
+                  We need some rubber gloves in case there is any biological waste.
+                </li>
+                <li>
+                  We need some heavy-duty trash bags for the trash we collect.
+                </li>
+                <li>
+                  We should get a couple pizzas to feed the volunteers! Everyone loves pizza.
+                </li>
+                <li>
+                  We need one or two people to volunteer to dispose of the trash when we're done.
+                </li>
+              </ul>
+            </li>
+            <li>
+              Now that we have our <b>Milestones</b> defined, we can create our <b>Problem</b>! When we create it, we set the location to the address of the vagrant lot, or optionally we can just set it to the zip code that we're looking for help in. We also set a "due date"- this is the date, not that we want to actually clean the vagrant lot, but that we want to have all of our Milestones completed by. We also set the number of volunteers we think will be needed. In this case, that's 4.
+            </li>
+            <li>
+              Once the Problem is created, it is opened up to the world! People can then "follow" the problem if they want to be involved. After following the Problem, a user may then participate in discussions about the Problem and volunteer to help solve any of the specific Milestones. When they do this, they are telling the other volunteers that they are willing to take responsibility for the completion of their Milestone.
+            </li>
+          </ul>
+        </ul>
+        <br>  
+        This system allows people to break down problems in their community that <em>seem impossible to handle alone</em> into discrete tasks and responsibilities that can be assigned to specific people and their progress can be tracked over time!
+        <br>
+        <br>
+        If you're interested in more information about Just Be Human, you can check out the links in the footer below!
+      </p>
+      <p class="lead">
+        <a class="btn btn-danger btn-lg" href="/users/sign_in" role="button">Let's start solving problems!</a>
+      </p>
+    </div>
   </p>
+
+
+
   <br>
-  <p class="lead">
-    <a class="btn btn-danger btn-lg" href="/users/sign_in" role="button">Let's start solving problems!</a>
-  </p>
+  <br>
+
+* this is the beta version of Just Be Human. Please forgive our bugs! We're a very small team, and we're working as hard as we can to fix them all!
+
 </div>
