--- a/app/views/problems/_form.html.erb
+++ b/app/views/problems/_form.html.erb
@@ -4,15 +4,15 @@
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
   <div class="form-inputs">
-    <%= f.input :title %>
-    <%= f.input :description %>
-    <%= f.input :category %>
+    <%= f.input :title, placeholder: "Keep your title short and simple!" %>
+    <%= f.input :description, placeholder: "A good description will go a long way." %>
+    <%= f.input :category, placeholder: "Examples: 'Trash Cleanup', 'Personal Outreach'" %>
     <%= f.input :subcategory %>
     <%= f.input :participants_required %>
     <%= f.input :target_completion_date, as: :date %>
-    <%= f.input :address %>
-    <%= f.input :postal_code %>
-    <%= f.input :country %>
+    <%= f.input :address, placeholder: "If possible, please enter an address" %>
+    <%= f.input :postal_code, placeholder: "A postcode is not necessary if an address is entered" %>
+    <%= f.input :country, placeholder: "Will default to United States if left blank" %>
   </div>
 
   <div class="form-actions">
