add beta tags to navbar and landing page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,3 +28,15 @@ html, body {
   margin: auto;
 }
 
+.navbar-beta-tag {
+  vertical-align: text-top;
+  font-size: .3rem;
+  line-height: 200%;
+}
+
+
+.landing-beta-tag {
+  font-size: .3em;
+  vertical-align: text-top;
+  line-height: 350%;
+}
