--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-  <h1 class="display-3">Welcome to <Strong>Just Be Human*</Strong></h1>
+  <h1 class="display-3">Welcome to <Strong>Just Be Human</Strong><sup class="landing-beta-tag">beta</sup></h1>
   <p class="lead">Thank you for checking out what we're building! Hopefully we can answer some of your questions here. </p>
   <hr class="my-4">
   <p>
@@ -84,6 +84,6 @@
   <br>
   <br>
 
-* this is the beta version of Just Be Human. Please forgive our bugs! We're a very small team, and we're working as hard as we can to fix them all!
+* You're going to hit some bugs, please forgive us! We're a small team and are working as hard as we can to fix them all.
 
 </div>
